--- a/views/login.jade
+++ b/views/login.jade
@@ -23,18 +23,18 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; apiUrl = '#{config.
 						input.form-control(name='username', ng-model="user.username", type='text', placeholder="#{__('username')} #{__('or')} #{__('email')} #{__('or')} #{__('Mobile Phone Number')}", ng-disabled="loginSuccess == true", required)
 						span.fa.fa-user.form-control-feedback
 					.form-group.has-feedback(ng-class="{ 'has-error' : formLogin.password.$error.$viewValue == '' }")
-						input.form-control(name='password', ng-model="user.password", type='password', placeholder="#{__('password')}", ng-disabled="loginSuccess == true", ng-keypress="($event.charCode==13) ? login() : return", required)
+						input.form-control(name='password', ng-model="user.password", type='password', placeholder="#{__('password')}", ng-disabled="loginSuccess == true", ui-keypress="{13:'login()'}", required)
 						span.fa.fa-lock.form-control-feedback
 					.checkbox.pull-left
 						label
 							input#remember(type='checkbox', ng-disabled="loginSuccess == true")
 							|  #{__('Stay signed in')}
 					.btn-group.pull-right
-						span.btn.dropdown-toggle(data-toggle='dropdown', ng-disabled="loginSuccess == true")
+						span.btn.dropdown-toggle(data-toggle='dropdown')
 							i.fa.fa-globe
 							|  #{__('language')}  
 							span.caret
-						ul.dropdown-menu
+						ul.dropdown-menu(ng-disabled="loginSuccess == true")
 							li(class="#{data.language == 'th' ? 'active' : ''}")
 								a(href="#{data.language == 'th' ? 'javascript:void(0)' : '/language/th'}") #{__('languageThai')}
 							li(class="#{data.language == 'en' ? 'active' : ''}")
