--- a/views/login.jade
+++ b/views/login.jade
@@ -116,6 +116,7 @@ html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; apiUrl = '#{config.
 		script(src='//src.powerdd.com/libs/jquery/2.1.4/jquery.min.js')
 		script(src='//src.powerdd.com/libs/js-cookie/2.0.3/js.cookie.min.js')
 		script(src='//src.powerdd.com/libs/angular/1.4.6/angular.min.js')
+		script(src='//src.powerdd.com/libs/angular/ngStorage/0.3.9/ngStorage.min.js')
 		script(src='//src.powerdd.com/libs/bootstrap/3.3.5/js/bootstrap.min.js')
 		script(src='//src.powerdd.com/libs/adminlte/2.3.0/js/app.min.js')
 		script(src='/javascripts/login.js')
