--- a/views/login.jade
+++ b/views/login.jade
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; apiUrl = '#{config.apiUrl}'; apiKey = '#{config.apiKey}'; shop = '#{config.shop}'")
+html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; apiUrl = '#{config.apiUrl}'; apiKey = '#{config.apiKey}'; shop = '#{config.shop}'; ip = '#{data.ip}' ")
 	head
 		title #{__('Sign in')} | PowerDD Backend System
 		meta(charset='utf-8')
