--- a/views/login.jade
+++ b/views/login.jade
@@ -1,5 +1,5 @@
 doctype html
-html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; apiUrl = '#{config.apiUrl}'; apiKey = '#{config.apiKey}'; shop = '#{config.shop}'; ip = '#{data.ip}'; browser = '#{data.ip}'; version = '#{data.ip}'; platform = '#{data.ip}'; os = '#{data.ip}'; deviceType = '#{data.ip}' ")
+html(lang='en', ng-app='PowerDD', ng-init="action = 'login'; apiUrl = '#{config.apiUrl}'; apiKey = '#{config.apiKey}'; shop = '#{config.shop}'; ip = '#{data.ip}'; browser = '#{data.browser}'; version = '#{data.version}'; platform = '#{data.platform}'; os = '#{data.os}'; deviceType = '#{data.deviceType}' ")
 	head
 		title #{__('Sign in')} | PowerDD Backend System
 		meta(charset='utf-8')
