--- a/views/lock.jade
+++ b/views/lock.jade
@@ -27,6 +27,7 @@ html(lang='en', ng-app='PowerDD')
 				| Enter your password to retrieve your session
 			.text-center
 				a(href='login.html') Or sign in as a different user
+				p #{data.json}
 
 		script(src='//src.powerdd.com/libs/jquery/2.1.4/jquery.min.js')
 		script(src='//src.powerdd.com/libs/jquery-cookie/1.4.1/jquery.cookie.min.js')
