--- a/views/test.jade
+++ b/views/test.jade
@@ -1,17 +1,16 @@
 doctype html
 html(lang='en', ng-app='PowerDD')
 	head
-		title= 'Sign in | PowerDD Backend'
+		title= 'Test'
 		meta(charset='utf-8')
 		meta(content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no', name='viewport')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/bootstrap/3.3.5/css/bootstrap.min.css')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/font-awesome/4.4.0/css/font-awesome.min.css')
 		link(rel='stylesheet', href='//src.powerdd.com/libs/adminlte/2.3.0/css/AdminLTE.css')
-		link(rel='stylesheet', href='/stylesheets/lock.css')
 		link(rel='shortcut icon', href='favicon.ico', type='image/x-icon')
 		link(rel='icon', href='favicon.ico', type='image/x-icon')
 
-	body.hold-transition.lockscreen.colorful
+	body
 		p #{data.xxx}
 	
 		script(src='//src.powerdd.com/libs/jquery/2.1.4/jquery.min.js')
