--- a/views/test.jade
+++ b/views/test.jade
@@ -11,7 +11,7 @@ html(lang='en', ng-app='PowerDD')
 		link(rel='icon', href='favicon.ico', type='image/x-icon')
 
 	body
-		p #{data.xxx}
+		p Hi Hipster
 	
 		script(src='//src.powerdd.com/libs/jquery/2.1.4/jquery.min.js')
 		script(src='//src.powerdd.com/libs/jquery-cookie/1.4.1/jquery.cookie.min.js')
