--- a/views/login-test.jade
+++ b/views/login-test.jade
@@ -25,7 +25,7 @@ html(lang='en')
 						span.fa.fa-lock.form-control-feedback
 					.checkbox.pull-left
 						label
-							input#remember
+							input#remember(type='checkbox')
 							|  #{__('Stay signed in')}
 					.btn-group.pull-right
 						span.btn.dropdown-toggle(data-toggle='dropdown')
