--- a/views/login-test.jade
+++ b/views/login-test.jade
@@ -85,14 +85,9 @@ html(lang='en')
 						p
 							span.msg-detail
 					button#btn-login.btn.bg-light-blue.btn-block.disabled(type='button') #{__('Sign in')}
-					button#btn-register.btn.bg-light-blue.btn-block.hidden.disabled(type='button') #{__('Create account')}
-					button#btn-check.btn.bg-light-blue.btn-block.hidden(type='button') ตรวจสอบ
-
-					p.hidden
-						a(href='javascript:') #{__('Sign in')}
-					p.hidden
+					p#btn-register
 						a(href='javascript:') #{__('Create account')}
-					p.hidden
+					p#btn-forgot
 						a(href='javascript:') #{__('Forgot password')}
 					
 					
