--- a/views/login-test.jade
+++ b/views/login-test.jade
@@ -97,4 +97,4 @@ html(lang='en')
 		script(src='//cdn.powerdd.com/angular/ngStorage/0.3.9/ngStorage.min.js')
 		script(src='//cdn.powerdd.com/bootstrap/3.3.5/js/bootstrap.min.js')
 		script(src='//cdn.powerdd.com/adminlte/2.3.0/js/app.min.js')
-		script(src='/javascripts/login.js')
+		script(src='/javascripts/login-test.js')
