--- a/views/login-test.jade
+++ b/views/login-test.jade
@@ -15,7 +15,7 @@ html(lang='en')
 		.login-box
 			.box.box-primary
 				.box-header.text-center.bg-light-blue
-					h3.box-title #{__('Sign in')}
+					h3.box-title #{__('Sign in')} Test
 				form#formLogin
 					.form-group.has-feedback
 						input#username.form-control(type='email', placeholder="#{__('username')} #{__('or')} #{__('email')} #{__('or')} #{__('Mobile Phone Number')}")
