--- a/views/login-test.jade
+++ b/views/login-test.jade
@@ -15,7 +15,7 @@ html(lang='en')
 		.login-box
 			.box.box-primary
 				.box-header.text-center.bg-light-blue
-					h3.box-title #{__('Sign in')} Test
+					h3.box-title #{__('Sign in')}
 				form#formLogin
 					.form-group.has-feedback
 						input#username.form-control(type='email', placeholder="#{__('username')} #{__('or')} #{__('email')} #{__('or')} #{__('Mobile Phone Number')}")
@@ -89,6 +89,7 @@ html(lang='en')
 						a(href='javascript:') #{__('Create account')}
 					p#btn-forgot
 						a(href='javascript:') #{__('Forgot password')}
+					p Test
 					
 					
 		script(src='//cdn.powerdd.com/jquery/2.1.4/jquery.min.js')
