--- a/views/login-test.jade
+++ b/views/login-test.jade
@@ -89,7 +89,8 @@ html(lang='en')
 						a(href='javascript:') #{__('Create account')}
 					p#btn-forgot
 						a(href='javascript:') #{__('Forgot password')}
-					p Test
+					p 
+						Test 
 					
 					
 		script(src='//cdn.powerdd.com/jquery/2.1.4/jquery.min.js')
