--- a/views/login-test.jade
+++ b/views/login-test.jade
@@ -90,7 +90,7 @@ html(lang='en')
 					p#btn-forgot
 						a(href='javascript:') #{__('Forgot password')}
 					p 
-						Test 
+						a(href='javascript:') Test 
 					
 					
 		script(src='//cdn.powerdd.com/jquery/2.1.4/jquery.min.js')
