--- a/views/login-test.jade
+++ b/views/login-test.jade
@@ -15,7 +15,7 @@ html(lang='en')
 		.login-box
 			.box.box-primary
 				.box-header.text-center.bg-light-blue
-					h3.box-title #{__('Sign in')}
+					h3.box-title #{__('Sign in')} (Test)
 				form#formLogin
 					.form-group.has-feedback
 						input#username.form-control(type='email', placeholder="#{__('username')} #{__('or')} #{__('email')} #{__('or')} #{__('Mobile Phone Number')}")
@@ -89,9 +89,6 @@ html(lang='en')
 						a(href='javascript:') #{__('Create account')}
 					p#btn-forgot
 						a(href='javascript:') #{__('Forgot password')}
-					p 
-						a(href='javascript:') Test 
-					
 					
 		script(src='//cdn.powerdd.com/jquery/2.1.4/jquery.min.js')
 		script(src='//cdn.powerdd.com/js-cookie/2.0.3/js.cookie.min.js')
@@ -99,4 +96,4 @@ html(lang='en')
 		script(src='//cdn.powerdd.com/angular/ngStorage/0.3.9/ngStorage.min.js')
 		script(src='//cdn.powerdd.com/bootstrap/3.3.5/js/bootstrap.min.js')
 		script(src='//cdn.powerdd.com/adminlte/2.3.0/js/app.min.js')
-		script(src='/javascripts/login-test.js') 
+		//script(src='/javascripts/login-test.js') 
